--- a/packages/bundler-vite/package.json
+++ b/packages/bundler-vite/package.json
@@ -24,5 +24,10 @@
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/bundler-vite#readme",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@umijs/bundler-utils": "4.0.0-alpha.1",
+    "@umijs/utils": "4.0.0-alpha.1",
+    "vite": "2.5.10"
   }
 }
