--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/preset-built-in#readme",
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "umi": "4.0.0-alpha.1"
   }
 }
