--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -46,6 +46,7 @@
     "@types/express": "4.17.13",
     "@types/webpack-sources": "3.2.0",
     "@types/ws": "8.2.0",
+    "@svgr/webpack": "5.5.0",
     "autoprefixer": "10.3.7",
     "babel-loader": "8.2.2",
     "compression": "1.7.4",
@@ -63,10 +64,12 @@
     "sass-loader": "12.1.0",
     "schema-utils": "3.1.1",
     "speed-measure-webpack-plugin": "1.5.0",
+    "svgo-loader": "3.0.0",
     "style-loader": "3.3.0",
     "tapable": "2.2.1",
     "terser": "5.9.0",
     "terser-webpack-plugin": "5.2.4",
+    "url-loader": "4.1.1",
     "webpack": "5.58.0",
     "webpack-5-chain": "8.0.0",
     "webpack-bundle-analyzer": "4.4.2",
@@ -76,6 +79,7 @@
   },
   "compiledConfig": {
     "deps": [
+      "@svgr/webpack",
       "autoprefixer",
       "babel-loader",
       "copy-webpack-plugin",
@@ -94,9 +98,11 @@
       "schema-utils",
       "style-loader",
       "speed-measure-webpack-plugin",
+      "svgo-loader",
       "tapable",
       "terser",
       "terser-webpack-plugin",
+      "url-loader",
       "webpack-5-chain",
       "webpack-bundle-analyzer",
       "webpack-dev-middleware",
@@ -138,6 +144,7 @@
       "webpack"
     ],
     "excludeDtsDeps": [
+      "@svgr/webpack",
       "babel-loader",
       "copy-webpack-plugin",
       "css-loader",
@@ -153,6 +160,8 @@
       "sass-loader",
       "speed-measure-webpack-plugin",
       "style-loader",
+      "svgo-loader",
+      "url-loader",
       "webpack-bundle-analyzer",
       "webpack-dev-middleware"
     ]
