feat: basic vite dev server (#126)
* chore(bundler-vite): add bin & set test deps

* chore(bundler-vite): add bundler-vite-demo for test

* feat(bundler-vite): add basic dev server & config features

* chore(bundler-vite): pre-compile deps

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.10.3",
     "@types/resolve": "^1.20.1",
     "@umijs/bundler-utils": "link:packages/bundler-utils",
+    "@umijs/bundler-vite": "link:packages/bundler-vite",
     "@umijs/bundler-webpack": "link:packages/bundler-webpack",
     "@umijs/utils": "link:packages/utils",
     "@vercel/ncc": "^0.31.1",
