feat: add importLazy util

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -43,6 +43,7 @@
     "debug": "4.3.2",
     "fs-extra": "10.0.0",
     "globby": "11.0.4",
+    "import-lazy": "4.0.0",
     "lodash": "4.17.21",
     "pkg-up": "3.1.0",
     "portfinder": "1.0.28",
@@ -61,6 +62,7 @@
       "cross-spawn",
       "debug",
       "fs-extra",
+      "import-lazy",
       "lodash",
       "pkg-up",
       "portfinder",
@@ -79,6 +81,7 @@
       "debug": "$$LOCAL",
       "fs-extra": "$$LOCAL",
       "globby": "$$LOCAL",
+      "import-lazy": "$$LOCAL",
       "lodash": "$$LOCAL",
       "pkg-up": "$$LOCAL",
       "portfinder": "$$LOCAL",
