feat: polish dev command

--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -25,7 +25,9 @@
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
-    "@umijs/core": "4.0.0-alpha.1"
+  "dependencies": {
+    "@umijs/bundler-webpack": "4.0.0-alpha.1",
+    "@umijs/core": "4.0.0-alpha.1",
+    "@umijs/utils": "4.0.0-alpha.1"
   }
 }
