--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -35,6 +35,7 @@
     "@types/lodash": "4.14.175",
     "@types/rimraf": "3.0.2",
     "@types/semver": "7.3.8",
+    "@types/mustache": "4.1.2",
     "address": "1.1.2",
     "axios": "0.22.0",
     "chalk": "4.1.2",
@@ -45,6 +46,7 @@
     "globby": "11.0.4",
     "import-lazy": "4.0.0",
     "lodash": "4.17.21",
+    "mustache": "4.2.0",
     "pkg-up": "3.1.0",
     "portfinder": "1.0.28",
     "resolve": "1.20.0",
@@ -64,6 +66,7 @@
       "fs-extra",
       "import-lazy",
       "lodash",
+      "mustache",
       "pkg-up",
       "portfinder",
       "rimraf",
@@ -83,6 +86,7 @@
       "globby": "$$LOCAL",
       "import-lazy": "$$LOCAL",
       "lodash": "$$LOCAL",
+      "mustache": "$$LOCAL",
       "pkg-up": "$$LOCAL",
       "portfinder": "$$LOCAL",
       "rimraf": "$$LOCAL",
