--- a/packages/renderer-react/tsconfig.json
+++ b/packages/renderer-react/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "module": "esnext",
     "outDir": "./dist",
-    "rootDir": "./src",
-    "jsx": "react"
+    "rootDir": "./src"
   },
   "include": ["src"]
 }
