--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -43,10 +43,10 @@
     "react-error-overlay": "6.0.9"
   },
   "devDependencies": {
+    "@svgr/webpack": "5.5.0",
     "@types/express": "4.17.13",
     "@types/webpack-sources": "3.2.0",
     "@types/ws": "8.2.0",
-    "@svgr/webpack": "5.5.0",
     "autoprefixer": "10.3.7",
     "babel-loader": "8.2.2",
     "compression": "1.7.4",
@@ -55,6 +55,7 @@
     "css-minimizer-webpack-plugin": "3.1.1",
     "cssnano": "5.0.8",
     "express": "4.17.1",
+    "http-proxy-middleware": "2.0.1",
     "less": "4.1.2",
     "less-loader": "10.0.1",
     "mini-css-extract-plugin": "2.3.0",
@@ -64,8 +65,8 @@
     "sass-loader": "12.1.0",
     "schema-utils": "3.1.1",
     "speed-measure-webpack-plugin": "1.5.0",
-    "svgo-loader": "3.0.0",
     "style-loader": "3.3.0",
+    "svgo-loader": "3.0.0",
     "tapable": "2.2.1",
     "terser": "5.9.0",
     "terser-webpack-plugin": "5.2.4",
@@ -88,6 +89,7 @@
       "cssnano",
       "compression",
       "express",
+      "http-proxy-middleware",
       "less",
       "less-loader",
       "mini-css-extract-plugin",
