--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -50,6 +50,7 @@
     "autoprefixer": "10.3.7",
     "babel-loader": "8.2.2",
     "compression": "1.7.4",
+    "connect-history-api-fallback": "1.6.0",
     "copy-webpack-plugin": "9.0.1",
     "css-loader": "6.3.0",
     "css-minimizer-webpack-plugin": "3.1.1",
@@ -88,6 +89,7 @@
       "css-minimizer-webpack-plugin",
       "cssnano",
       "compression",
+      "connect-history-api-fallback",
       "express",
       "http-proxy-middleware",
       "less",
@@ -153,6 +155,7 @@
       "css-minimizer-webpack-plugin",
       "cssnano",
       "compression",
+      "connect-history-api-fallback",
       "less",
       "less-loader",
       "mini-css-extract-plugin",
