--- a/packages/bundler-vite/package.json
+++ b/packages/bundler-vite/package.json
@@ -32,6 +32,10 @@
     "@umijs/bundler-utils": "4.0.0-alpha.1",
     "@umijs/utils": "4.0.0-alpha.1",
     "@vitejs/plugin-react": "1.0.4",
+    "postcss-preset-env": "6.7.0",
+    "rollup-plugin-copy": "3.4.0",
+    "rollup-plugin-polyfill": "3.0.0",
+    "rollup-plugin-visualizer": "5.5.2",
     "vite": "2.6.5"
   },
   "devDependencies": {
