feat: plugin register, config plugins, ...

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,7 +12,9 @@
     "target": "esnext",
     "jsx": "react",
     "paths": {
-      "@umijs/utils": ["./packages/utils"]
+      "umi": ["./packages/umi"],
+      "@umijs/utils": ["./packages/utils"],
+      "@umijs/renderer-react": ["./packages/renderer-react"]
     },
   },
   "exclude": [
