--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -3,7 +3,8 @@
   "version": "4.0.0-alpha.1",
   "description": "umi",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "module": "index.esm.js",
+  "types": "index.d.ts",
   "files": [
     "dist"
   ],
@@ -28,6 +29,7 @@
   "dependencies": {
     "@umijs/core": "4.0.0-alpha.1",
     "@umijs/preset-built-in": "4.0.0-alpha.1",
+    "@umijs/renderer-react": "4.0.0-alpha.1",
     "@umijs/utils": "4.0.0-alpha.1",
     "v8-compile-cache": "2.3.0"
   }
