--- a/packages/renderer-react/package.json
+++ b/packages/renderer-react/package.json
@@ -27,8 +27,7 @@
   },
   "dependencies": {
     "history": "5.0.1",
-    "react-router-dom": "6.0.0-beta.6",
-    "react-loadable": "5.5.0"
+    "react-router-dom": "6.0.0-beta.6"
   },
   "devDependencies": {
     "react": "18.0.0-alpha-f2c381131-20211004",
