dep: update deps

--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -36,7 +36,7 @@
     "@umijs/mfsu": "4.0.0-alpha.1",
     "@umijs/utils": "4.0.0-alpha.1",
     "es5-imcompatible-versions": "^0.1.73",
-    "jest-worker": "27.2.4",
+    "jest-worker": "27.3.1",
     "node-libs-browser": "2.2.1",
     "postcss": "8.3.9",
     "postcss-preset-env": "6.7.0",
@@ -53,18 +53,18 @@
     "compression": "1.7.4",
     "connect-history-api-fallback": "1.6.0",
     "copy-webpack-plugin": "9.0.1",
-    "css-loader": "6.3.0",
+    "css-loader": "6.4.0",
     "css-minimizer-webpack-plugin": "3.1.1",
     "cssnano": "5.0.8",
     "express": "4.17.1",
     "http-proxy-middleware": "2.0.1",
     "less": "4.1.2",
-    "less-loader": "10.0.1",
-    "mini-css-extract-plugin": "2.3.0",
+    "less-loader": "10.2.0",
+    "mini-css-extract-plugin": "2.4.2",
     "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-loader": "6.1.1",
+    "postcss-loader": "6.2.0",
     "purgecss-webpack-plugin": "4.0.3",
-    "sass-loader": "12.1.0",
+    "sass-loader": "12.2.0",
     "schema-utils": "3.1.1",
     "speed-measure-webpack-plugin": "1.5.0",
     "style-loader": "3.3.0",
@@ -73,9 +73,9 @@
     "terser": "5.9.0",
     "terser-webpack-plugin": "5.2.4",
     "url-loader": "4.1.1",
-    "webpack": "5.58.0",
+    "webpack": "5.59.0",
     "webpack-5-chain": "8.0.0",
-    "webpack-bundle-analyzer": "4.4.2",
+    "webpack-bundle-analyzer": "4.5.0",
     "webpack-dev-middleware": "5.2.1",
     "webpack-sources": "3.2.1",
     "ws": "8.2.3"
@@ -129,6 +129,7 @@
       "terser": "$$LOCAL",
       "terser-webpack-plugin": "$$LOCAL",
       "uglify-js": "uglify-js",
+      "webpack": "$$LOCAL",
       "webpack-5-chain": "$$LOCAL",
       "webpack-sources": "$$LOCAL",
       "ws": "$$LOCAL"
