--- a/packages/bundler-webpack/compiled/http-proxy-middleware/package.json
+++ b/packages/bundler-webpack/compiled/http-proxy-middleware/package.json
@@ -1,6 +1,1 @@
-{
-  "name": "http-proxy-middleware",
-  "author": "Steven Chim",
-  "license": "MIT",
-  "types": "dist/index.d.ts"
-}
+{"name":"http-proxy-middleware","author":"Steven Chim","license":"MIT","types":"dist/index.d.ts"}
