feat: config alias and fix mfsu match problem

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@swc/core": "^1.2.101",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.1",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
     "@types/resolve": "^1.20.1",
     "@umijs/bundler-utils": "link:packages/bundler-utils",
     "@umijs/bundler-vite": "link:packages/bundler-vite",
