--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,7 +9,7 @@
     "noUnusedParameters": true,
     "strict": true,
     "skipLibCheck": true,
-    "target": "esnext",
+    "target": "es2015",
     "jsx": "react",
     "paths": {
       "umi": ["./packages/umi"],
