--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -45,6 +45,7 @@
     "react-error-overlay": "6.0.9"
   },
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.1",
     "@svgr/webpack": "5.5.0",
     "@types/express": "4.17.13",
     "@types/hapi__joi": "17.1.7",
@@ -66,6 +67,7 @@
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-loader": "6.2.0",
     "purgecss-webpack-plugin": "4.0.3",
+    "react-refresh": "0.10.0",
     "sass-loader": "12.2.0",
     "schema-utils": "3.1.1",
     "speed-measure-webpack-plugin": "1.5.0",
@@ -131,6 +133,7 @@
       "terser": "$$LOCAL",
       "terser-webpack-plugin": "$$LOCAL",
       "uglify-js": "uglify-js",
+      "url-loader": "$$LOCAL",
       "webpack": "$$LOCAL",
       "webpack-5-chain": "$$LOCAL",
       "webpack-sources": "$$LOCAL",
