feat: umi g page (#131)
* feat: add @umijs/generate

* chore: code style

* fix: test error

* chore: change directory name

* feat: add umi-utils BaseGenerator

* feat: umi g page

* chore: types

* feat: redesign registerGenerator

* chore: update pnpm-lock

* fix: test env

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -30,25 +30,30 @@
     "clipboardy": "2.3.0"
   },
   "devDependencies": {
+    "@types/color": "3.0.2",
     "@types/cross-spawn": "6.0.2",
     "@types/debug": "4.1.7",
     "@types/lodash": "4.14.175",
     "@types/mustache": "4.1.2",
+    "@types/prompts": "^2.0.14",
     "@types/rimraf": "3.0.2",
     "@types/semver": "7.3.9",
     "address": "1.1.2",
     "axios": "0.23.0",
     "chalk": "4.1.2",
     "cheerio": "1.0.0-rc.10",
+    "color": "4.0.1",
     "cross-spawn": "7.0.3",
     "debug": "4.3.2",
     "fs-extra": "10.0.0",
+    "glob": "7.2.0",
     "globby": "11.0.4",
     "import-lazy": "4.0.0",
     "lodash": "4.17.21",
     "mustache": "4.2.0",
     "pkg-up": "3.1.0",
     "portfinder": "1.0.28",
+    "prompts": "2.4.2",
     "resolve": "1.20.0",
     "rimraf": "3.0.2",
     "semver": "7.3.5",
@@ -61,14 +66,17 @@
       "axios",
       "chalk",
       "cheerio",
+      "color",
       "cross-spawn",
       "debug",
+      "glob",
       "fs-extra",
       "import-lazy",
       "lodash",
       "mustache",
       "pkg-up",
       "portfinder",
+      "prompts",
       "rimraf",
       "resolve",
       "semver",
