--- a/packages/bundler-vite/package.json
+++ b/packages/bundler-vite/package.json
@@ -29,6 +29,7 @@
     "bundler-vite": "bin/bundler-vite.js"
   },
   "dependencies": {
+    "@svgr/core": "5.5.0",
     "@umijs/bundler-utils": "4.0.0-alpha.1",
     "@umijs/utils": "4.0.0-alpha.1",
     "@vitejs/plugin-react": "1.0.5",
