--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -32,6 +32,7 @@
     "@umijs/bundler-vite": "4.0.0-alpha.1",
     "@umijs/core": "4.0.0-alpha.1",
     "@umijs/renderer-react": "4.0.0-alpha.1",
+    "@umijs/server": "4.0.0-alpha.1",
     "@umijs/utils": "4.0.0-alpha.1",
     "react": "18.0.0-alpha-f2c381131-20211004",
     "react-dom": "18.0.0-alpha-f2c381131-20211004",
