--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,6 +25,11 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "react": "18.0.0-alpha-4298ddbc5-20211023",
+    "react-dom": "18.0.0-alpha-4298ddbc5-20211023",
+    "react-router-dom": "6.0.0-beta.8"
+  },
   "devDependencies": {
     "@types/express": "4.17.13"
   }
