feat: config command (#138)
* feat: init ast

* chore: merge umi@3 ast

* feat: umi config list and get

* feat: init umi config

* feat: add getASTByFilePath

* feat: add removeConfigByName

* feat: add setConfigByName

* chore: update pnpm-lock

* feat: umi config set name value

* feat: umi config remove name

* chore: update pnpm-lock

* fix: judge the type according to the 'value' instead of 'key'

* chore: change test util

--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -28,6 +28,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@umijs/ast": "4.0.0-alpha.1",
     "@umijs/bundler-webpack": "4.0.0-alpha.1",
     "@umijs/bundler-vite": "4.0.0-alpha.1",
     "@umijs/core": "4.0.0-alpha.1",
