feat: add swc-loader (#123)
* feat: add swc-loader

* feat: support typescript

* chore: update pnpm-lock

* feat: swc-loader only support typescript

* chore: code style

--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -71,6 +71,7 @@
     "sass-loader": "12.2.0",
     "schema-utils": "3.1.1",
     "speed-measure-webpack-plugin": "1.5.0",
+    "swc-loader": "0.1.15",
     "style-loader": "3.3.0",
     "svgo-loader": "3.0.0",
     "tapable": "2.2.1",
@@ -106,6 +107,7 @@
       "sass-loader",
       "schema-utils",
       "style-loader",
+      "swc-loader",
       "speed-measure-webpack-plugin",
       "svgo-loader",
       "tapable",
@@ -173,6 +175,7 @@
       "sass-loader",
       "speed-measure-webpack-plugin",
       "style-loader",
+      "swc-loader",
       "svgo-loader",
       "url-loader",
       "webpack-bundle-analyzer",
