fix: umi config list --all and prettier print string (#144)

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -53,6 +53,7 @@
     "mustache": "4.2.0",
     "pkg-up": "3.1.0",
     "portfinder": "1.0.28",
+    "prettier": "2.4.1",
     "prompts": "2.4.2",
     "resolve": "1.20.0",
     "rimraf": "3.0.2",
@@ -74,6 +75,7 @@
       "import-lazy",
       "lodash",
       "mustache",
+      "prettier",
       "pkg-up",
       "portfinder",
       "prompts",
