bundler-vite schema and support legacy (#148)
* feat: autoCSSModule plugin

* feat: autoCSSModule plugin

* feat: svgr plugin

* fix: resolve conversation

* fix: resolve conversation

* feat: add regular case

* feat: bundler-vite schema and support legacy

Co-authored-by: lyl444@qq.com <liuyonglang.lyl@alibaba-inc.com>

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@umijs/bundler-vite": "link:packages/bundler-vite",
     "@umijs/bundler-webpack": "link:packages/bundler-webpack",
     "@umijs/utils": "link:packages/utils",
+    "@umijs/server": "link:packages/server",
     "@vercel/ncc": "^0.31.1",
     "dts-packer": "^0.0.2",
     "esno": "^0.10.1",
