--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -40,10 +40,11 @@
     "@umijs/babel-preset-umi": "4.0.0-alpha.1",
     "@umijs/mfsu": "4.0.0-alpha.1",
     "@umijs/utils": "4.0.0-alpha.1",
+    "css-loader": "6.4.0",
     "es5-imcompatible-versions": "^0.1.73",
     "jest-worker": "27.3.1",
     "node-libs-browser": "2.2.1",
-    "postcss": "8.3.9",
+    "postcss": "^8.3.11",
     "postcss-preset-env": "6.7.0",
     "react-error-overlay": "6.0.9"
   },
@@ -57,7 +58,6 @@
     "compression": "1.7.4",
     "connect-history-api-fallback": "1.6.0",
     "copy-webpack-plugin": "9.0.1",
-    "css-loader": "6.4.0",
     "css-minimizer-webpack-plugin": "3.1.1",
     "cssnano": "5.0.8",
     "express": "4.17.1",
