--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/bundler-webpack",
-  "version": "4.0.0-alpha.1",
+  "version": "4.0.0-beta.1",
   "description": "@umijs/bundler-webpack",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -34,12 +34,12 @@
     "bundler-webpack": "bin/bundler-webpack.js"
   },
   "dependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.1",
     "@swc/core": "1.2.105",
     "@types/hapi__joi": "17.1.7",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.1",
-    "@umijs/babel-preset-umi": "4.0.0-alpha.1",
-    "@umijs/mfsu": "4.0.0-alpha.1",
-    "@umijs/utils": "4.0.0-alpha.1",
+    "@umijs/babel-preset-umi": "4.0.0-beta.1",
+    "@umijs/mfsu": "4.0.0-beta.1",
+    "@umijs/utils": "4.0.0-beta.1",
     "css-loader": "6.4.0",
     "es5-imcompatible-versions": "^0.1.73",
     "jest-worker": "27.3.1",
@@ -72,9 +72,9 @@
     "sass-loader": "12.2.0",
     "schema-utils": "3.1.1",
     "speed-measure-webpack-plugin": "1.5.0",
-    "swc-loader": "0.1.15",
     "style-loader": "3.3.0",
     "svgo-loader": "3.0.0",
+    "swc-loader": "0.1.15",
     "tapable": "2.2.1",
     "terser": "5.9.0",
     "terser-webpack-plugin": "5.2.4",
