--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/preset-built-in",
-  "version": "4.0.0-alpha.1",
+  "version": "4.0.0-beta.1",
   "description": "@umijs/preset-built-in",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -28,13 +28,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/ast": "4.0.0-alpha.1",
-    "@umijs/bundler-webpack": "4.0.0-alpha.1",
-    "@umijs/bundler-vite": "4.0.0-alpha.1",
-    "@umijs/core": "4.0.0-alpha.1",
-    "@umijs/renderer-react": "4.0.0-alpha.1",
-    "@umijs/server": "4.0.0-alpha.1",
-    "@umijs/utils": "4.0.0-alpha.1",
+    "@umijs/ast": "4.0.0-beta.1",
+    "@umijs/bundler-vite": "4.0.0-beta.1",
+    "@umijs/bundler-webpack": "4.0.0-beta.1",
+    "@umijs/core": "4.0.0-beta.1",
+    "@umijs/renderer-react": "4.0.0-beta.1",
+    "@umijs/server": "4.0.0-beta.1",
+    "@umijs/utils": "4.0.0-beta.1",
     "react": "18.0.0-alpha-f2c381131-20211004",
     "react-dom": "18.0.0-alpha-f2c381131-20211004",
     "react-router": "6.0.0-beta.7",
