--- a/packages/bigfish/package.json
+++ b/packages/bigfish/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/bigfish",
-  "version": "4.0.0-alpha.1",
+  "version": "4.0.0-beta.1",
   "description": "@umijs/bigfish",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
