--- a/packages/bundler-utils/package.json
+++ b/packages/bundler-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/bundler-utils",
-  "version": "4.0.0-alpha.1",
+  "version": "4.0.0-beta.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -26,7 +26,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/utils": "4.0.0-alpha.1",
+    "@umijs/utils": "4.0.0-beta.1",
     "esbuild": "0.13.8"
   },
   "devDependencies": {
