--- a/packages/bundler-vite/package.json
+++ b/packages/bundler-vite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/bundler-vite",
-  "version": "4.0.0-alpha.1",
+  "version": "4.0.0-beta.1",
   "description": "@umijs/bundler-vite",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -30,8 +30,8 @@
   },
   "dependencies": {
     "@svgr/core": "5.5.0",
-    "@umijs/bundler-utils": "4.0.0-alpha.1",
-    "@umijs/utils": "4.0.0-alpha.1",
+    "@umijs/bundler-utils": "4.0.0-beta.1",
+    "@umijs/utils": "4.0.0-beta.1",
     "@vitejs/plugin-legacy": "1.6.2",
     "@vitejs/plugin-react": "1.0.5",
     "postcss-preset-env": "6.7.0",
