--- a/packages/mfsu/package.json
+++ b/packages/mfsu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/mfsu",
-  "version": "4.0.0-alpha.1",
+  "version": "4.0.0-beta.1",
   "description": "@umijs/mfsu",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -26,8 +26,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/bundler-utils": "4.0.0-alpha.1",
-    "@umijs/utils": "4.0.0-alpha.1"
+    "@umijs/bundler-utils": "4.0.0-beta.1",
+    "@umijs/utils": "4.0.0-beta.1"
   },
   "devDependencies": {
     "@types/express": "4.17.13",
