chore: add format script

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,10 +3,6 @@
   "singleQuote": true,
   "trailingComma": "all",
   "proseWrap": "never",
-  "overrides": [
-    { "files": ".prettierrc", "options": { "parser": "json" } }
-  ],
-  "plugins": [
-    "prettier-plugin-organize-imports"
-  ]
+  "overrides": [{ "files": ".prettierrc", "options": { "parser": "json" } }],
+  "plugins": ["prettier-plugin-organize-imports"]
 }
