--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "4.0.0-alpha.1",
   "scripts": {
     "preinstall": "esno scripts/preinstall.ts",
+    "format": "prettier --write .",
     "bootstrap": "esno scripts/bootstrap.ts",
     "release": "esno scripts/release.ts",
     "build": "pnpm -r --filter ./packages run build",
