--- a/packages/bundler-webpack/tsconfig.client.json
+++ b/packages/bundler-webpack/tsconfig.client.json
@@ -7,5 +7,9 @@
     "outDir": "./client",
     "rootDir": "./src"
   },
-  "include": ["src/client","src/constants.ts", "src/utils/formatWebpackMessages.ts"]
+  "include": [
+    "src/client",
+    "src/constants.ts",
+    "src/utils/formatWebpackMessages.ts"
+  ]
 }
