chore: use workspace:* for inner packages

--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@types/resolve": "^1.20.1",
-    "@umijs/bundler-utils": "link:packages/bundler-utils",
-    "@umijs/bundler-vite": "link:packages/bundler-vite",
-    "@umijs/bundler-webpack": "link:packages/bundler-webpack",
-    "@umijs/utils": "link:packages/utils",
-    "@umijs/server": "link:packages/server",
+    "@umijs/bundler-utils": "workspace:*",
+    "@umijs/bundler-vite": "workspace:*",
+    "@umijs/bundler-webpack": "workspace:*",
+    "@umijs/utils": "workspace:*",
+    "@umijs/server": "workspace:*",
     "@vercel/ncc": "^0.31.1",
     "dts-packer": "^0.0.2",
     "esno": "^0.10.1",
