--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -28,13 +28,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/ast": "4.0.0-beta.1",
-    "@umijs/bundler-vite": "4.0.0-beta.1",
-    "@umijs/bundler-webpack": "4.0.0-beta.1",
-    "@umijs/core": "4.0.0-beta.1",
-    "@umijs/renderer-react": "4.0.0-beta.1",
-    "@umijs/server": "4.0.0-beta.1",
-    "@umijs/utils": "4.0.0-beta.1",
+    "@umijs/ast": "workspace:*",
+    "@umijs/bundler-vite": "workspace:*",
+    "@umijs/bundler-webpack": "workspace:*",
+    "@umijs/core": "workspace:*",
+    "@umijs/renderer-react": "workspace:*",
+    "@umijs/server": "workspace:*",
+    "@umijs/utils": "workspace:*",
     "react": "18.0.0-alpha-f2c381131-20211004",
     "react-dom": "18.0.0-alpha-f2c381131-20211004",
     "react-router": "6.0.0-beta.7",
