--- a/packages/mfsu/package.json
+++ b/packages/mfsu/package.json
@@ -26,8 +26,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/bundler-utils": "4.0.0-beta.1",
-    "@umijs/utils": "4.0.0-beta.1"
+    "@umijs/bundler-utils": "workspace:*",
+    "@umijs/utils": "workspace:*"
   },
   "devDependencies": {
     "@types/express": "4.17.13",
