dep: upgrade babel to 7.16

--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "build": "pnpm -r --filter ./packages run build",
     "build:release": "pnpm -r --filter ./packages run build -- --declarationMap false",
     "dev": "pnpm -r --filter ./packages --parallel run dev",
-    "dep:update": "pnpm up --interactive --latest --recursive",
+    "dep:update": "esno scripts/preinstall.ts && pnpm up --interactive --latest --recursive",
     "test": "jest"
   },
   "devDependencies": {
-    "esbuild-jest": "^0.5.0",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.1",
-    "@types/react": "^17.0.30",
-    "@types/react-dom": "^17.0.9",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
     "@types/resolve": "^1.20.1",
     "@umijs/bundler-utils": "workspace:*",
     "@umijs/bundler-vite": "workspace:*",
     "@umijs/bundler-webpack": "workspace:*",
-    "@umijs/utils": "workspace:*",
     "@umijs/server": "workspace:*",
+    "@umijs/utils": "workspace:*",
     "@vercel/ncc": "^0.31.1",
     "dts-packer": "^0.0.2",
+    "esbuild-jest": "^0.5.0",
     "esno": "^0.10.1",
     "git-repo-info": "^2.1.1",
     "jest": "^27.3.1",
