--- a/examples/libs/package.json
+++ b/examples/libs/package.json
@@ -3,6 +3,7 @@
     "dev": "../../packages/umi/bin/umi.js dev"
   },
   "devDependencies": {
+    "antd": "4.16.13",
     "framer-motion": "5.0.0"
   }
 }
