--- a/packages/mfsu/package.json
+++ b/packages/mfsu/package.json
@@ -31,6 +31,15 @@
   },
   "devDependencies": {
     "@types/express": "4.17.13",
+    "mrmime": "1.0.0",
     "webpack": "5.61.0"
+  },
+  "compiledConfig": {
+    "deps": [
+      "mrmime"
+    ],
+    "externals": {
+      "mrmime": "$$LOCAL"
+    }
   }
 }
