feat: umi plugin list (#157)
* support command:plugin

* bugfix:presets未定义时,UMI_PRESETS为undefined

* code formatting

* filter plugin.ts

* pnpm format

--- a/examples/boilerplate/package.json
+++ b/examples/boilerplate/package.json
@@ -1,6 +1,10 @@
 {
   "scripts": {
-    "dev": "../../packages/umi/bin/umi.js dev"
+    "start": "pnpm run dev",
+    "dev": "umi dev",
+    "plugin": "umi plugin"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "umi": "workspace:*"
+  }
 }
