--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ts-node": "^10.4.0",
     "typescript": "^4.5.0-beta",
     "uglify-js": "^3.14.2",
+    "umi": "workspace:*",
     "yorkie": "^2.0.0",
     "zx": "^4.2.0"
   },
