--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -45,6 +45,8 @@
     "color": "4.0.1",
     "cross-spawn": "7.0.3",
     "debug": "4.3.2",
+    "deepmerge": "4.2.2",
+    "execa": "5.1.1",
     "fs-extra": "10.0.0",
     "glob": "7.2.0",
     "globby": "11.0.4",
@@ -70,6 +72,8 @@
       "color",
       "cross-spawn",
       "debug",
+      "deepmerge",
+      "execa",
       "glob",
       "fs-extra",
       "import-lazy",
