chore: update example script

--- a/examples/libs/package.json
+++ b/examples/libs/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "../../packages/umi/bin/umi.js dev"
+    "dev": "umi dev"
   },
   "devDependencies": {
     "antd": "4.16.13",
