--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -37,9 +37,9 @@
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.1",
     "@swc/core": "1.2.105",
     "@types/hapi__joi": "17.1.7",
-    "@umijs/babel-preset-umi": "workspace:*",
-    "@umijs/mfsu": "workspace:*",
-    "@umijs/utils": "workspace:*",
+    "@umijs/babel-preset-umi": "4.0.0-beta.1",
+    "@umijs/mfsu": "4.0.0-beta.1",
+    "@umijs/utils": "4.0.0-beta.1",
     "css-loader": "6.5.0",
     "es5-imcompatible-versions": "^0.1.73",
     "jest-worker": "27.3.1",
