--- a/packages/babel-preset-umi/package.json
+++ b/packages/babel-preset-umi/package.json
@@ -28,8 +28,8 @@
   "dependencies": {
     "@babel/runtime": "7.16.0",
     "@bloomberg/record-tuple-polyfill": "0.0.4",
-    "@umijs/bundler-utils": "workspace:*",
-    "@umijs/utils": "workspace:*",
+    "@umijs/bundler-utils": "4.0.0-beta.1",
+    "@umijs/utils": "4.0.0-beta.1",
     "core-js": "3.19.0"
   }
 }
