--- a/packages/bigfish/package.json
+++ b/packages/bigfish/package.json
@@ -30,7 +30,7 @@
     "access": "public"
   },
   "dependencies": {
-    "umi": "workspace:*",
-    "@umijs/plugins": "workspace:*"
+    "umi": "4.0.0-beta.1",
+    "@umijs/plugins": "4.0.0-beta.1"
   }
 }
