--- a/packages/bundler-utils/package.json
+++ b/packages/bundler-utils/package.json
@@ -26,7 +26,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/utils": "workspace:*",
+    "@umijs/utils": "4.0.0-beta.1",
     "esbuild": "0.13.11"
   },
   "devDependencies": {
