--- a/packages/create-umi/package.json
+++ b/packages/create-umi/package.json
@@ -30,6 +30,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/bundler-utils": "workspace:*"
+    "@umijs/bundler-utils": "4.0.0-beta.1"
   }
 }
