--- a/packages/bigfish/package.json
+++ b/packages/bigfish/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bigfish",
-  "version": "4.0.0-beta.1",
+  "version": "4.0.0-beta.2",
   "description": "@umijs/bigfish",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -30,7 +30,7 @@
     "access": "public"
   },
   "dependencies": {
-    "umi": "4.0.0-beta.1",
-    "@umijs/plugins": "4.0.0-beta.1"
+    "@umijs/plugins": "4.0.0-beta.2",
+    "umi": "4.0.0-beta.2"
   }
 }
