example: add @alita/inspx

--- a/examples/libs/package.json
+++ b/examples/libs/package.json
@@ -3,6 +3,7 @@
     "dev": "umi dev"
   },
   "devDependencies": {
+    "@alita/inspx": "0.0.2",
     "antd": "4.16.13",
     "framer-motion": "5.0.0"
   }
