--- a/packages/bundler-esbuild/package.json
+++ b/packages/bundler-esbuild/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@umijs/mfsu",
+  "name": "@umijs/bundler-esbuild",
   "version": "4.0.0-beta.5",
-  "description": "@umijs/mfsu",
+  "description": "@umijs/bundler-esbuild",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "compiled",
     "dist"
   ],
   "scripts": {
@@ -22,26 +21,13 @@
   ],
   "license": "MIT",
   "bugs": "https://github.com/umijs/umi-next/issues",
-  "homepage": "https://github.com/umijs/umi-next/tree/master/packages/mfsu#readme",
+  "homepage": "https://github.com/umijs/umi-next/tree/master/packages/bundler-esbuild#readme",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@umijs/bundler-esbuild": "4.0.0-beta.5",
     "@umijs/bundler-utils": "4.0.0-beta.5",
-    "@umijs/utils": "4.0.0-beta.5"
-  },
-  "devDependencies": {
-    "@types/express": "4.17.13",
-    "mrmime": "1.0.0",
-    "webpack": "5.61.0"
-  },
-  "compiledConfig": {
-    "deps": [
-      "mrmime"
-    ],
-    "externals": {
-      "mrmime": "$$LOCAL"
-    }
+    "@umijs/utils": "4.0.0-beta.5",
+    "esbuild-plugin-less": "1.1.5"
   }
 }
