--- a/examples/libs/package.json
+++ b/examples/libs/package.json
@@ -3,8 +3,8 @@
     "dev": "umi dev"
   },
   "devDependencies": {
-    "@alita/inspx": "0.0.2",
     "antd": "4.16.13",
-    "framer-motion": "5.0.0"
+    "framer-motion": "5.0.0",
+    "swr": "1.1.0-beta.8"
   }
 }
