--- a/packages/father/package.json
+++ b/packages/father/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bigfish",
+  "name": "father",
   "version": "4.0.0-beta.5",
-  "description": "bigfish",
+  "description": "father",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -9,7 +9,7 @@
     "bin"
   ],
   "bin": {
-    "bigfish": "bin/bigfish.js"
+    "father": "bin/father.js"
   },
   "scripts": {
     "build": "pnpm tsc",
@@ -21,16 +21,19 @@
     "url": "https://github.com/umijs/umi-next"
   },
   "authors": [
-    "chencheng <sorrycc@gmail.com> (https://github.com/sorrycc)"
+    "chencheng <sorrycc@gmail.com> (https://github.com/sorrycc)",
+    "PeachScript <scdzwyxst@gmail.com> (https://github.com/PeachScript)"
   ],
   "license": "MIT",
   "bugs": "https://github.com/umijs/umi-next/issues",
-  "homepage": "https://github.com/umijs/umi-next/tree/master/packages/bigfish#readme",
+  "homepage": "https://github.com/umijs/umi-next/tree/master/packages/father#readme",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@umijs/plugins": "4.0.0-beta.5",
-    "umi": "4.0.0-beta.5"
+    "@umijs/core": "4.0.0-beta.5",
+    "@umijs/utils": "4.0.0-beta.5",
+    "umi": "4.0.0-beta.5",
+    "v8-compile-cache": "2.3.0"
   }
 }
